--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h1>Hello Angela, I love you!</h1>
   <img src="images/7-minute-school.jpg" alt="" width="500">
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum doloremque, esse neque, ab asperiores eum error similique atque dicta quis fugiat nemo labore? Quo, iusto?</p>
-  
+  <h3>Thank you so much</h3>
 </body>
 </html>
